# internal/models/asset.go
@@ -7,7 +7,7 @@ import (
 type Asset struct {
 	ID       int          `json:"id" db:"asset_id"`
 	Serial   *string      `json:"serial" db:"item_serial"`
-	Location Location     `json:"location,omitempty"`
+	Location Location     `json:"location"`
 	Category ItemCategory `json:"category"`
 	Status   string       `json:"status"`
 	PyrCode  string       `json:"pyrcode"`
