# internal/models/item_category.go
@@ -8,9 +8,9 @@ import (
 )
 
 type ItemCategory struct {
-	ID    int    `json:"id,omitempty" db:"category_id"`
-	Name  string `json:"name,omitempty" db:"type"`
-	Label string `json:"label,omitempty" binding:"required" db:"label"`
+	ID    int    `json:"id" db:"category_id"`
+	Name  string `json:"name" db:"type"`
+	Label string `json:"label" binding:"required" db:"label"`
 	PyrID string `json:"pyr_id" binding:"omitempty,alphanum,min=1,max=4" db:"pyr_id"`
 	Type  string `json:"type" binding:"alphanum,min=1,max=24" db:"category_type"`
 }
